--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".Activities.SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
         <activity android:name=".Activities.MoodActivity" />
         <activity android:name=".Activities.HistoryActivity" />
         <activity android:name=".Activities.ResultActivity" />
